# blackbox

./: CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: ci.yml  release.yml
config/: default.toml
docs/: ARCHITECTURE.md  CROSSCHECK.md
src/: app.rs  main.rs  msg.rs
src/model/: buffer.rs  config.rs  cursor.rs  file_tree.rs  mod.rs  mode.rs
src/plugin/: host_fns.rs  installer.rs  manager.rs  manifest.rs  mod.rs  permission.rs  runtime.rs
src/update/: buffer_ops.rs  file_io.rs  keys.rs  mod.rs  navigation.rs  search.rs
src/view/: backlinks.rs  command.rs  editor.rs  finder.rs  mod.rs  sidebar.rs  statusbar.rs
